[package]
name = "voyager"
description = "Voyager for Lemmy and PieFed"
# Version is managed in tauri.conf.json (sourced from package.json)
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/aeharding/voyager"

[lib]
name = "voyager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"

[profile.release]
codegen-units = 1
lto = true
strip = true
